Issue: Cannot see scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,29 +1,23 @@
-html {
+html, body {
     padding: 0;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     position: fixed;
+    overflow: visible;
 
-    /* background-color: rgba(30, 31, 38, 0.92); */
-    background-image: 
+    background-color: rgba(30, 31, 38, 0.92);
+    /* background-image: 
         linear-gradient(
             rgba(30, 31, 38, 0.92),
             rgba(30, 31, 38, 0.92)
         ),
-        url("https://i.imgur.com/OOjXLOX.png");
+        url("https://i.imgur.com/OOjXLOX.png"); */
 
     background-attachment: fixed;
     background-position: top right;
     background-repeat: no-repeat;
     background-size: cover;
     min-width: 100%;
-    min-height: 100%; 
-}
-html::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    backdrop-filter: blur(15px);
+    min-height: 100%;
 }
